# test_observer

./: .dockerignore  .env.example  .gitignore  .gitmodules  .licenserc.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .wokeignore  AGENTS.md  CLAUDE.md  ENHANCED_ERROR_HANDLING.md  README.md  REUSE.toml  docker-compose.yml  plan-nuxt3MigrationPhase1.prompt.md  pubspec.yaml  spread.yaml  test_observer.code-workspace
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  DEBUG_GITHUB_README.md  DEBUG_JIRA_README.md  DEBUG_LAUNCHPAD_README.md  Dockerfile  Dockerfile.production  README.md  alembic.ini  debug_github.py  debug_jira.py  debug_launchpad.py  dev_entrypoint.sh  entrypoint.sh  get_version.py  k8s.yaml  locustfile.py  pyproject.toml  set_project_version_hook.py  skaffold.yaml  wait_for_app.py  wait_for_db.py
backend/alembic/: env.py
backend/alembic/versions/: 2023_05_02_0936-092883a5d838_add_basic_v0_models.py  2023_05_02_1200-52e9dd0e86ea_add_basic_v0_models.py  2023_05_02_1224-0332267421e8_add_basic_v0_models.py  2023_05_02_1347-5f106e482c7e_add_basic_v0_models.py  2023_05_03_1222-a3637f5027ec_add_basic_v0_models.py  2023_05_03_1426-7bc7d0a38ad8_add_basic_v0_models.py  2023_05_03_1634-13bdb2f74508_add_basic_v0_models.py  2023_05_04_1000-465b38949733_add_basic_v0_models.py  2023_05_11_1234-e3a483fad7b0_add_version_field_for_artefacts.py  2023_05_15_1339-1dc24581b4f4_add_basic_models.py  2023_05_19_0832-572a80b4473c_populate_initial_data.py  2023_05_26_1152-12383cab7248_initial_families_and_stages.py  2023_05_29_0917-183e6d6df6ff_remove_is_archived_will_use_a_view.py
backend/charm/: .dockerignore  .gitignore  .vscode-settings.json  CONTRIBUTING.md  LICENSE  README.md  README_ISSUE_SYNC_CONFIG.md  Taskfile.yml  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt
backend/charm/src/: charm.py  faults.py  workload.py
backend/docs/: DEBUGGING_ISSUE_SYNC.md
backend/k8s/: api.yaml  db.yaml  redis.yaml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 2023_05_26_1151-7a9069d2ab59_initial_data_models.py  2023_05_26_1152-12383cab7248_initial_families_and_stages.py  2023_05_29_0917-183e6d6df6ff_remove_is_archived_will_use_a_view.py  2023_05_30_1249-bab2d2897e38_add_architecture_to_environments.py  2023_05_31_1259-b2c80c6f87c1_make_a_couple_of_foreign_keys_required.py  2023_06_01_0728-6a80dad01d24_use_python_enum_in_data_model.py  2023_06_12_0914-5f817bd3ce08_.py  2023_06_20_1000-b33ee8dd41b1_use_nulls_not_distinct.py  2023_07_11_1148-158244992900_disallow_multiple_artefact_builds_with_.py  2023_08_08_0944-451ec6d4c102_add_store_key_to_artefact_source.py  2023_08_08_0946-18b1066d92c3_add_store_key_to_artefact_source.py  2023_08_11_1151-ce0b50f657e9_unique_constraint_with_null_revision_.py  2023_10_25_1139-cb121ad343dd_add_track_store_pocket_repo_to_artefact.py  2023_10_25_1233-38807948d269_copy_artefact_source_into_track_store_.py  2023_10_25_1240-0d23bbbe9ec8_add_delete_cascades_to_foreign_keys.py  (+119 more)
backend/schemas/: openapi.json
backend/schemata/: openapi.json
backend/scripts/: add_user.py  change_assignee.py  charm_pass_fail_report.py  check_endpoint_permissions.sh  compare_submissions.py  delete_artefact.py  fetch_openapi_schema.sh  fetch_openapi_yaml.sh  fetch_test_results_report.py  load_prod_data_locally.py  promote_user_to_admin.py  rerun_failing_test_executions.py  seed_data.py  show_common_failures.py  show_testcase_history.py  test_executions_rerunner.py  test_executions_restarter.py  test_failure_reason.py
backend/src/: data_transfer_objects.py  main.py  repository.py  services.py
backend/tasks/: __init__.py  celery.py
backend/test_observer/: __init__.py  _version.py  data_transfer_objects.py  error_handling.py  error_utils.py  logging_config.py  main.py  repository.py  snapcraft.py  snapcraft_models.py
backend/tests/: __init__.py  asserts.py  conftest.py  data_generator.py  fake_issue_apis.py  fake_launchpad_api.py  helpers.py  test_metrics_lifespan.py  test_repository.py  test_sentry.py  test_services.py  test_snap_manager.py  types.py
(+1332 files in other folders)
