[tool.poetry]
name = "test-observer"
version = "0.0.0"
description = "Observe the status and state of certification tests for various artefacts"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.9"
pg8000 = "^1.29.4"
alembic = "^1.10.3"
poetry-dynamic-versioning = {extras = ["plugin"], version = "^0.22.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.17.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = "true"
tagged-metadata = "true"



[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
requests-mock = "^1.10.0"
python-multipart = "^0.0.6"
httpx = "^0.24.0"
sqlalchemy-utils = "^0.41.1"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
