[tool.poetry]
name = "test-observer"
version = "0.0.0"
description = "Observe the status and state of certification tests for various artefacts"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = { extras = ["standard"], version = "^0.21.1" }
sqlalchemy = "^2.0.16"
pg8000 = "^1.29.4"
alembic = "^1.10.3"
poetry-dynamic-versioning = { extras = ["plugin"], version = "^0.22.0" }
requests = "^2.31.0"
sentry-sdk = "0.10.2"
launchpadlib = "^1.11.0"
email-validator = "^2.1.0.post1"
celery = { extras = ["redis"], version = "^5.3.6" }
aiohttp = "^3.9.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ruff = "^0.11.6"
types-requests = "^2.31.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
requests-mock = "^1.10.0"
python-multipart = "^0.0.18"
httpx = "^0.24.0"
sqlalchemy-utils = "^0.41.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = "true"
tagged-metadata = "true"

[tool.ruff]
select = [
    "E",
    "F",
    "B",
    "N",
    "UP",
    "ANN",
    "C4",
    "T20",
    "SIM",
    "ARG",
    "ERA",
    "PLE",
    "TID252",
]
ignore = ["ANN201", "ANN003", "N999", "ANN101", "ANN204", "N818", "B008"]

[tool.mypy]
exclude = "charm/*"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
