[project]
name = "test-observer"
description = "Observe the status and state of certification tests for various artefacts"
authors = []
dynamic = ["version"] # uv-dynamic-versioning used
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.21.1,<0.22.0",
    "sqlalchemy>=2.0.16,<3.0.0",
    "pg8000>=1.29.4,<2.0.0",
    "alembic>=1.10.3,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "sentry-sdk==0.10.2",
    "launchpadlib>=1.11.0,<2.0.0",
    "email-validator>=2.1.0.post1,<3.0.0",
    "celery[redis]>=5.3.6,<6.0.0",
    "aiohttp>=3.9.4,<4.0.0"
]

[dependency-groups]
dev = [
    "mypy>=1.3.0,<2.0.0",
    "ruff>=0.11.6,<0.12.0",
    "types-requests>=2.31.0.1,<2.32.0.0"
]
test = [
    "pytest>=7.3.1,<8.0.0",
    "requests-mock>=1.10.0,<2.0.0",
    "python-multipart>=0.0.20,<0.1.0",
    "httpx>=0.28.0,<0.29.0",
    "sqlalchemy-utils>=0.41.1,<0.42.0"
]

[tool.ruff]
lint.select = [
    "E",
    "F",
    "B",
    "N",
    "UP",
    "ANN",
    "C4",
    "T20",
    "SIM",
    "ARG",
    "ERA",
    "PLE",
    "TID252",
]
lint.ignore = ["ANN201", "ANN003", "N999", "ANN204", "N818", "B008"]

[tool.mypy]
exclude = ["charm/*"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hatchling.*"
ignore_missing_imports = true

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
versioning = "git"
style = "semver"